--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-window.location.href = 'https://www.3wking.com:88/'
+<!DOCTYPE html>
+<html class="img-no-display"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Hello! Welcome to Synology Web Station!</title>
+<style>
+window.location.href = 'https://www.3wking.com:88/’，
